# fix-client

./: .gitignore  .gitmodules  AmendDialog.cpp  AmendDialog.h  Amenddialog.ui  Applicationbridge.h  CMakeLists.txt  CancelDialog.cpp  CancelDialog.h  CancelDialog.ui  ClientApplication.cpp  ClientApplication.h  Context.h  Entrust.h  FIX42.xml  FixClientLogFactory.cpp  FixClientLogFactory.h  OrderTableWidget.cpp  OrderTableWidget.h  Resource.qrc  SessionHolder.cpp  SessionHolder.h  amenddialog.cpp  amenddialog.h  amenddialog.ui  applicationbridge.cpp  canceldialog.cpp  canceldialog.h  canceldialog.ui  fix-client.files  fix-client.includes  fixwidget.cpp  fixwidget.h  fixwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  startup.sh
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: Allocator.h.52F4DE01F1F4F86C.idx  Application.h.7987D924D429C55F.idx  Applicationbridge.h.B479B4717DD04A89.idx  BusinessMessageReject.h.5DC70EEB7D16C566.idx  CMakeCXXCompilerId.cpp.02B2DDDB8A3F1676.idx  CMakeCXXCompilerId.cpp.5689A00274BA4C49.idx  ClientApplication.cpp.0CBA746386C25FDE.idx  ClientApplication.h.2F33E8B24F11A342.idx  Context.h.9E244BC2E10BA609.idx  DOMDocument.h.726E7F05EB80A68C.idx  DataDictionary.h.3D05E55CEA7B89AE.idx  DataDictionaryProvider.h.9AEE7029CA7BEA95.idx  Dictionary.h.FEDECB2FBD5CF50A.idx  Entrust.h.856F982AD64BE03A.idx  Except.h.C615E8B17B7FAB97.idx  Exceptions.h.6724DFEE91022076.idx  ExecutionReport.h.0A169FE513D5DCF7.idx  Field.h.00407AE7ACC72709.idx  FieldConvertors.h.6EACA3436920ABC5.idx  FieldMap.h.FBFD8C84B1F36F41.idx  FieldNumbers.h.B67E8216AA75B15C.idx  FieldTypes.h.36A4686B6788EE67.idx  Fields.h.1434251CDDDA825A.idx  FileLog.h.A83F0DB99ED261F3.idx  FileStore.h.C8564596737ECC0D.idx  FixCommonFields.h.050B06206E3A7543.idx  FixFieldNumbers.h.85FE59619D8F71CC.idx  FixFields.h.3D3E3719EA896EBC.idx  FixValues.h.0CFB7850AC63042E.idx  Group.h.DA5FBA8B1665011A.idx  HostDetailsProvider.h.F7C5C722742A8864.idx  Initiator.h.EBF5B040B9BE57E8.idx  Log.h.BFE1CB5D4EA83021.idx  Message.h.06E67F9ED2946951.idx  Message.h.13A80E04A21900B2.idx  Message.h.16129EAC52088C72.idx  Message.h.202888F109D1BFC2.idx  Message.h.52CC2594ED2D82CF.idx  Message.h.53FDF80055DC73B2.idx  Message.h.567A604DC9A26BA2.idx  (+55 more)
include/quickfix/include/quickfix/: config.h
include/spdlog/lib/: benchmark_main.lib
lib/spdlog/cmake/benchmark/: benchmarkTargets.cmake
lib/spdlog/pkgconfig/: benchmark.pc  spdlog.pc
